src/test/ui-fulldeps/macro-crate-rlib.stderr
error[E0457]: plugin `rlib_crate_test` only found in rlib format, but must be available in dylib format
  --> $DIR/macro-crate-rlib.rs:6:11
   |
LL | #![plugin(rlib_crate_test)]
   |           ^^^^^^^^^^^^^^^

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/issues/29597
  --> $DIR/macro-crate-rlib.rs:6:1
   |
LL | #![plugin(rlib_crate_test)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error

